Register missing types to applicationClassloader